# jiho-bot

./: .env.example  .gitignore  Dockerfile  Dockerfile.gen  README.md  docker-compose.gen.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
scripts/: generate_voices.py
src/: bot.py  config.py  constants.py  main.py  scheduler.py  voice_manager.py
tests/: conftest.py  test_bot.py  test_config.py  test_generate_voices.py  test_scheduler.py  test_voice_manager.py
